Cell Preview : Prevent Divider Indicator Jump During Resize

--- a/css/admin.less
+++ b/css/admin.less
@@ -1754,10 +1754,11 @@
 				}
 
 				.preview-cell {
-					display: inline-block;
-					position: relative;
-					padding: 0 6px;
 					cursor: pointer;
+					display: inline-block;
+					overflow: visible !important;
+					padding: 0 6px;
+					position: relative;
 
 					.preview-cell-in {
 						border: 1px solid #bcccd2;
